# CosmologicalStructure

./: .env.example  .gitignore  README.md  REPORT.md  demo.ipynb  pyproject.toml  universe.html
resources/campaigns/biscuits/: params.json
resources/campaigns/cosmology/: eval.csv  eval_log.csv  eval_ratio.csv  eval_ratio_log.csv  grid.csv
resources/datasets/: cosmo.csv  cosmo_latin.csv  cosmo_latin_log.csv  cosmo_latin_ratio.csv  cosmo_latin_ratio_log.csv  cosmo_log.csv  cosmo_ratio.csv  cosmo_ratio_log.csv  cosmology.csv  cosmology_Latin_big.csv  cosmology_Latin_small.csv
resources/datasets/scripts/: cosmology.py
scripts/: universe.js
