[tool.poetry]
name = "cosmological_structure"
version = "0.0.0"
description = "Using twinLab to create a cosmological structure model"
authors = ["Alexander Mead <alexander@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
twinlab = "^1.0.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pandas = "^1.0.0"
hmcode = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
